# ObjectivelyGPU

./: .gitignore  COPYING  Doxyfile  Makefile.am  README.md  configure 2.ac  configure.ac  fetch-sdl3.sh
.claude/: settings.json
.github/: copilot-instructions.md
.github/workflows/: build.yml  docs.yml  release.yml
Documentation/: guide.md  index.md  install.md
Examples/: Hello.c  Hello.frag.glsl  Hello.frag.hlsl  Hello.frag.spv  Hello.vert.glsl  Hello.vert.hlsl  Hello.vert.spv  HelloCompute.c  HelloCompute.comp.glsl  HelloCompute.comp.msl  HelloCompute.comp.spv  HelloCompute.frag.glsl  HelloCompute.frag.msl  HelloCompute.frag.spv  HelloCompute.vert.glsl  HelloCompute.vert.hlsl  HelloCompute.vert.msl  HelloCompute.vert.spv  HelloiOS  Makefile.am
Examples/Hello-iOS/: Hello-iOS.c  Info.plist
Examples/Shaders/: Hello.frag.msl  Hello.vert.msl  HelloCompute.comp.hlsl  HelloCompute.comp.msl  HelloCompute.comp.spv  HelloCompute.frag.hlsl  HelloCompute.frag.msl  HelloCompute.frag.spv  HelloCompute.vert.msl  Makefile.am
Frameworks/: fetch-sdl3.sh  link-sdl3-local.sh  use-sdl3.sh
ObjectivelyGPU.vs15/: ObjectivelyGPU-shadercross.vcxproj  ObjectivelyGPU.sln  ObjectivelyGPU.vcxproj  build_settings.props  sdl3.targets
ObjectivelyGPU.vs15/Sources/: WindowlyGPU.h
ObjectivelyGPU.xcodeproj/: project.pbxproj
ObjectivelyGPU.xcodeproj/xcshareddata/xcschemes/: ObjectivelyGPU-Hello-iOS.xcscheme  ObjectivelyGPU-xcframework.xcscheme  ObjectivelyGPU.xcscheme
ObjectivelyGPU.xcworkspace/: contents.xcworkspacedata
Sources/: Makefile.am  ObjectivelyGPU.h  ObjectivelyGPU.pc.in
Sources/ObjectivelyGPU/: Buffer.c  Buffer.h  CommandBuffer.c  CommandBuffer.h  ComputePass.c  ComputePass.h  ComputePipeline.c  ComputePipeline.h  Config.h.in  CopyPass.c  CopyPass.h  Framebuffer.c  Framebuffer.h  GraphicsPipeline.c  GraphicsPipeline.h  Log.h  Makefile.am  Math.h  Mathlib.h  QueryPool.c  QueryPool.h  RenderDevice.c  RenderDevice.h  RenderPass.c  RenderPass.h  Sampler.c  Sampler.h  Shader.c  Shader.h  Texture.c  Texture.h  TransferBuffer.h  Types.h
scripts/: build-xcframework.sh
